--- a/pages/prices.html
+++ b/pages/prices.html
@@ -13,7 +13,7 @@
     <img src="/images/prices/cenorazpis1.jpg" alt="prices" class="prices1">
     <div class="button">
         <a href="/pages/index.html" target="_blank">
-          <img  src="/images/About_me/homeButton.png" alt="homeButton" class="homeButton">
+          <img  src="/images/About_me/homeButoon.jpg" alt="homeButton" class="homeButton">
         </a>
 </body>
 </html>
