--- a/pages/index.html
+++ b/pages/index.html
@@ -13,11 +13,11 @@
         <ul class="navigationItems">
             <li class="home">
                 <a href="/pages/index.html">
-                    <img  src="/images/About_me/homeButton.png"alt="homeButton" class="homeButton" >
+                    <img  src="/images/About_me/homeButoon.jpg"alt="homeButton" class="homeButton" >
                 </a>
             </li>
             <li>
-                <a href="/pages/index.html" target="_blank">Запази час</a>
+                <a href="/pages/form.html" target="_blank">Запази час</a>
             </li>
             <li>
                 <a href="/pages/aboutMe.html" target="_blank">За мен</a>
