--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <a href="/pages/contacts.html" target="_blank">Контакти</a>
             </li>
             <li>
-                <a href="/pages/prices.html" target="_blank"> Цени</a>
+                <a href="pages/prices.html" target="_blank"> Цени</a>
             </li>
             <li>
                 <a href="/pages/galerry.html" target="_blank">Галерия</a>
