--- a/pages/prices.html
+++ b/pages/prices.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>prices</title>
-    <link rel="stylesheet" href="/prices.css">
+    <link rel="stylesheet" href= "/styles/prices.css">
 </head>
 <body>
     <h1 class="prices">
@@ -12,7 +12,7 @@
     </h1>
     <img src="/images/prices/cenorazpis1.jpg" alt="prices" class="prices1">
     <div class="button">
-        <a href="/pages/index.html" target="_blank">
+        <a href="/index.html" target="_blank">
           <img  src="/images/About_me/homeButoon.jpg" alt="homeButton" class="homeButton">
         </a>
 </body>
