--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="conatinerNavItems">
         <ul class="navigationItems">
             <li class="home">
-                <a href="/pages/index.html">
+                <a href="index.html">
                     <img  src="/images/About_me/homeButoon.jpg"alt="homeButton" class="homeButton" >
                 </a>
             </li>
@@ -23,10 +23,10 @@
                 <a href="/pages/aboutMe.html" target="_blank">За мен</a>
             </li>
             <li>
-                <a href="/pages/contacts.html" target="_blank">Контакти</a>
+                <a href="/pages/contacts2.html" target="_blank">Контакти</a>
             </li>
             <li>
-                <a href="pages/prices.html" target="_blank"> Цени</a>
+                <a href="/pages/prices.html" target="_blank"> Цени</a>
             </li>
             <li>
                 <a href="/pages/galerry.html" target="_blank">Галерия</a>
