--- a/pages/aboutMe.html
+++ b/pages/aboutMe.html
@@ -13,7 +13,7 @@
     </h1>
     </div>
     <div class="button">
-        <a href="/pages/index.html">
+        <a href="/index.html">
           <img  src="/images/About_me/homeButoon.jpg" alt="homeButton" class="homeButton">
         </a>
     </div>
