--- a/pages/galerry.html
+++ b/pages/galerry.html
@@ -14,7 +14,7 @@
         Моята работа- моят живот!
     </h1>
     <div class="button">
-    <a href="/pages/index.html">
+    <a href="/index.html">
         <img  src="/images/About_me/homeButoon.jpg"alt="homeButton" class="homeButton" >
     </a>
  
