--- a/pages/form.html
+++ b/pages/form.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="/styles/form.css">
 </head>
 <body>
-    <fieldset class="form1">
         <h1>Запази час</h1>
         <div class="button">
             <a href="/pages/index.html" target="_blank">
               <img  src="/images/About_me/homeButoon.jpg" alt="homeButton" class="homeButton">
             </a>
+            </div>
         <fieldset class="form2">
-            <legend>Лични данни</legend>
+            <legend class="about">Лични данни</legend>
             <label for="username" >Име:</label>
             <input type="text" name="username" id="username" placeholder="малко име, на латиница"> <br> <br>
             <label for="Surname">Име</label>
@@ -26,8 +26,6 @@
             <input type="radio" name="gender" id="gender" value="мъж:">
             <label for="gender">жена</label>
             <input type="radio" name="gender" id="gender" value="жена">
-            
-            </p>
         </fieldset>
         <br>
         <label for="comment" >Коментар:</label><br>
