--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 </a>
             </li>
             <li>
-                <a href="/pages/form.html" target="_blank">Запази час</a>
+                <a href="/pages/form2.html" target="_blank">Запази час</a>
             </li>
             <li>
                 <a href="/pages/aboutMe.html" target="_blank">За мен</a>
