Fix paths using Server Root

--- a/pages/aboutMe.html
+++ b/pages/aboutMe.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/styles/aboutMe.css">
+    <link rel="stylesheet" href="/hairbyelizapetrova/styles/aboutMe.css">
 </head>
-<body> 
+<body>
     <div class="aboutMe">
     <h1 class="titleAbout">
         За мен
     </h1>
     </div>
     <div class="button">
-        <a href="/index.html">
-          <img  src="/images/About_me/homeButoon.jpg" alt="homeButton" class="homeButton">
+        <a href="/hairbyelizapetrova/index.html">
+          <img  src="/hairbyelizapetrova/images/About_me/homeButoon.jpg" alt="homeButton" class="homeButton">
         </a>
     </div>
     <div class="tmp1">
-    <img src="/images/About_me/imgMe.jpg" alt="picOfmE" class="picOfme">
-    </div> 
+    <img src="/hairbyelizapetrova/images/About_me/imgMe.jpg" alt="picOfmE" class="picOfme">
+    </div>
     <div class="trl">
         <p class="text">
           Казвам се Елиза Петрова и <br>
@@ -33,7 +33,7 @@
           посещавам обучения и семинари!<br>
         </p>
     </div>
-  
+
     <p class="poslepis">
     ПС:<br>
     Благодаря на моите клиенти, за товова,че ми се доверяват!<br>
