--- a/pages/galerry.html
+++ b/pages/galerry.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>galerry</title>
-    <link rel="stylesheet" href="/styles/galerry.css">
+    <link rel="stylesheet" href="/hairbyelizapetrova/styles/galerry.css">
 </head>
 <body>
     <div class="background">
-        <img src="/images/galerry/background.jpg" alt="background" class="img">
+        <img src="/hairbyelizapetrova/images/galerry/background.jpg" alt="background" class="img">
     </div>
     <h1 class="heading">
         Моята работа- моят живот!
     </h1>
     <div class="button">
-    <a href="/index.html">
-        <img  src="/images/About_me/homeButoon.jpg"alt="homeButton" class="homeButton" >
+    <a href="/hairbyelizapetrova/index.html">
+        <img  src="/hairbyelizapetrova/images/About_me/homeButoon.jpg"alt="homeButton" class="homeButton" >
     </a>
     </div>
     <div class="logo">
       <a href="https://www.facebook.com/profile.php?id=100083877056114">
-        <img src="/images/galerry/logo-facebookpng-32244.png" alt="Facebookbutton" class="logo1">
+        <img src="/hairbyelizapetrova/images/galerry/logo-facebookpng-32244.png" alt="Facebookbutton" class="logo1">
         <p class="lookhere">
             Клинки тук и разгледай
         </p>
