--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css" >
     <title>Document</title>
-    <link rel="stylesheet" href="/styles/index.css">
+    <link rel="stylesheet" href="/hairbyelizapetrova/styles/index.css">
 </head>
 <body>
   <header>
@@ -13,23 +13,23 @@
         <ul class="navigationItems">
             <li class="home">
                 <a href="index.html">
-                    <img  src="/images/About_me/homeButoon.jpg"alt="homeButton" class="homeButton" >
+                    <img  src="/hairbyelizapetrova/images/About_me/homeButoon.jpg"alt="homeButton" class="homeButton" >
                 </a>
             </li>
             <li>
-                <a href="/pages/form2.html" target="_blank">Запази час</a>
+                <a href="/hairbyelizapetrova/pages/form2.html" target="_blank">Запази час</a>
             </li>
             <li>
-                <a href="/pages/aboutMe.html" target="_blank">За мен</a>
+                <a href="/hairbyelizapetrova/pages/aboutMe.html" target="_blank">За мен</a>
             </li>
             <li>
-                <a href="/pages/contacts2.html" target="_blank">Контакти</a>
+                <a href="/hairbyelizapetrova/pages/contacts2.html" target="_blank">Контакти</a>
             </li>
             <li>
-                <a href="/pages/prices.html" target="_blank"> Цени</a>
+                <a href="/hairbyelizapetrova/pages/prices.html" target="_blank"> Цени</a>
             </li>
             <li>
-                <a href="/pages/galerry.html" target="_blank">Галерия</a>
+                <a href="/hairbyelizapetrova/pages/galerry.html" target="_blank">Галерия</a>
             </li>
         </ul>
     </div>
