--- a/pages/form2.html
+++ b/pages/form2.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/styles/form2.css">
+    <link rel="stylesheet" href="/hairbyelizapetrova/styles/form2.css">
 </head>
 <body>
   <div class="button">
-    <a href="/index.html" target="_blank">
-       <img  src="/images/About_me/homeButoon.jpg" alt="homeButton" class="homeButton">
+    <a href="/hairbyelizapetrova/index.html" target="_blank">
+       <img  src="/hairbyelizapetrova/images/About_me/homeButoon.jpg" alt="homeButton" class="homeButton">
     </a>
   </div>
   <div class="heaing">
