--- a/pages/aboutMe.html
+++ b/pages/aboutMe.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/hairbyelizapetrova/styles/aboutMe.css">
+    <link rel="stylesheet" href="../styles/aboutMe.css">
 </head>
 <body>
     <div class="aboutMe">
@@ -13,12 +13,12 @@
     </h1>
     </div>
     <div class="button">
-        <a href="/hairbyelizapetrova/index.html">
-          <img  src="/hairbyelizapetrova/images/About_me/homeButoon.jpg" alt="homeButton" class="homeButton">
+        <a href="../index.html">
+          <img  src="../images/About_me/homeButoon.jpg" alt="homeButton" class="homeButton">
         </a>
     </div>
     <div class="tmp1">
-    <img src="/hairbyelizapetrova/images/About_me/imgMe.jpg" alt="picOfmE" class="picOfme">
+    <img src="../images/About_me/imgMe.jpg" alt="picOfmE" class="picOfme">
     </div>
     <div class="trl">
         <p class="text">
