--- a/pages/prices.html
+++ b/pages/prices.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>prices</title>
-    <link rel="stylesheet" href= "/hairbyelizapetrova/styles/prices.css">
+    <link rel="stylesheet" href= "../styles/prices.css">
 </head>
 <body>
     <h1 class="prices">
         ЦЕНОРАЗПИС
     </h1>
-    <img src="/hairbyelizapetrova/images/prices/cenorazpis1.jpg" alt="prices" class="prices1">
+    <img src="../images/prices/cenorazpis1.jpg" alt="prices" class="prices1">
     <div class="button">
-        <a href="/hairbyelizapetrova/index.html" target="_blank">
-          <img  src="/hairbyelizapetrova/images/About_me/homeButoon.jpg" alt="homeButton" class="homeButton">
+        <a href="../index.html" target="_blank">
+          <img  src="../images/About_me/homeButoon.jpg" alt="homeButton" class="homeButton">
         </a>
 </body>
 </html>
