--- a/pages/contacts2.html
+++ b/pages/contacts2.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/hairbyelizapetrova/styles/contacts2.css">
+    <link rel="stylesheet" href="../styles/contacts2.css">
 </head>
 <body>
     <section>
         <div class="button">
-            <a href="/hairbyelizapetrova/index.html">
-             <img  src="/hairbyelizapetrova/images/About_me/homeButoon.jpg" alt="homeButton" class="homeButton">
+            <a href="../index.html">
+             <img  src="../images/About_me/homeButoon.jpg" alt="homeButton" class="homeButton">
             </a>
          </div>
         <div class="main">
