--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css" >
     <title>Document</title>
-    <link rel="stylesheet" href="/styles/index.css">
+    <link rel="stylesheet" href="./styles/index2.css">
 </head>
 <body>
   <header>
@@ -39,6 +39,15 @@
             <br>Eliza Petrova
         </div>
     </div>
+    <div class="popUp">
+        <hr>
+        <div class="textPopUp">Запази час още сега на тел:
+        <hr>
+               0887344555
+       </div>
+    </div>  
   </header>
+<script src="./js/index (1).js">
+</script>
 </body>
 </html>
