--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
        </div>
     </div>  
   </header>
-<script src="./js/index (1).js">
+<script src="./js/index .js">
 </script>
 </body>
 </html>
